<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home_menu_button"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            />

        <item android:id="@+id/profile_menu_button"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"
            />
    </group>

    <item
        android:title="@string/more">
        <menu>
            <group android:checkableBehavior="single">

                <item android:id="@+id/about_menu_button"
                    android:title="@string/about"
                    android:icon="@drawable/ic_about"/>

                <item android:id="@+id/logout_menu_button"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout"/>
            </group>
        </menu>
    </item>


</menu>