<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/admins"
        android:id="@+id/adminSection"
        android:icon="@drawable/ic_section_admin"/>
    <item android:title="@string/doctors"
        android:id="@+id/doctorSection"
        android:icon="@drawable/ic_section_doctor" />
    <item android:title="@string/patients"
        android:id="@+id/patientSection"
        android:icon="@drawable/ic_section_patient" />
    <item android:title="Labo"
        android:id="@+id/laboratorianSection"
        android:icon="@drawable/ic_section_laboratorian"/>
    <item android:title="@string/receptionists"
        android:id="@+id/receptionistSection"
        android:icon="@drawable/ic_section_receptionist"/>
</menu>