<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/dialog"
    android:orientation="vertical"
    tools:context=".ui.dialog.RequestPermissionDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/permissions_required" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/to_use_medScope_app_you_need_to_grant_all_the_permission"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/click_grant_permissions_permissions_allow_all_permissions"
            android:textColor="@color/black"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/later_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/jura_bold"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="10dp"
            android:text="@string/later"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/grant_permissions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/jura_bold"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="10dp"
            android:text="@string/grant_permissions"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>

</LinearLayout>